--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,6 @@ Description goes here.
 
 == Copyright
 
-Copyright (c) 2011 dave. See LICENSE.txt for
+Copyright (c) 2011 Dave Hrycyszyn. See LICENSE.txt for
 further details.
 
